# ESE-JBD

./: README.md  SmartCity_Requirements.odt  Task 4
Parking System Code/: CMakeLists.txt  Parking.cpp  Parking.h  Vehicle.cpp  Vehicle.h  enum.h  tests.cpp
Task1_2/: Smart_cityrequirements_divya.odt
Task2_smartcity/EA_tool/: Activity diagram for object detection.qea  Basic use case of traffic control.qea  Block_diagram.qea
Task3_smartcity/: Overall_Block_defination.eapx
Task3_smartcity/EA_tool/: Context diagram.qea  state_diagram_traffic_system.qea  traffic_lightsystem.qea
Task4_EA/: Parametric_Constraints.eapx  Readme.txt  constraaint_diagram.EAP.eapx  statemachine_AandC.eapx
Task4_EA/EA/: Internal_block diagram.eapx
Task4_EA/PDF/: spp_graph.dot  statemachine_AandC.ldb
Task5/Code/: scheduling_pycpa.py
Task5/images/: SIMSOP_RM.xml  SimsoEDF.xml  Tasks.dot
Task_4/: Code  Parking system implementation.ino  Parking system.ino  Read me
